--- a/JS-40/06-DOM/02-examining-dom-properties/index.html
+++ b/JS-40/06-DOM/02-examining-dom-properties/index.html
@@ -9,14 +9,13 @@
 
 </head>
 <body>
-    <div class="container">
+    <div id = 'contenedor' class="container">
         <div class="main-container">
             <h1>Library Done Easy</h1>
             <div class="content-wrapper">
                 <div class="book-list">
                     
                 </div>
-
                 <div class="button-group">
                     <button class="btn add">
                         <span class="material-symbols-outlined">add</span>
@@ -34,6 +33,6 @@
             </div>
 
         </div>
-  
+<script src="script.js"></script>
 </body>
 </html>
